Fix truncation in panels.

--- a/src/stylesheets/components/_metadata.scss
+++ b/src/stylesheets/components/_metadata.scss
@@ -6,6 +6,7 @@ $component-padding-horizontal: 12px !default;
 
 .metadata-container {
   flex: 1 1 0;
+  min-width: 0; // Fix truncation
 }
 
 .metadata-heading {
