--- a/src/stylesheets/components/_photo-list.scss
+++ b/src/stylesheets/components/_photo-list.scss
@@ -5,6 +5,7 @@
 .photo-list {
   line-height: $row-height;
   flex: 1 1 0;
+  min-width: 0; // Fix truncation
 
   .photo {
     display: flex;
